--- a/flask-api/k8s/taskmaster.yml
+++ b/flask-api/k8s/taskmaster.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: taskmaster
-          image: trainwithshubham/taskmaster-python:latest
+          image: shreya6/flask-api:latest
           ports:
             - containerPort: 5000
           imagePullPolicy: Always
